--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,7 +41,8 @@ button {
   margin-top: 15px;
 }
 
-/* :root {
+/* For dropdown */
+:root {
   --primary-bg: #fff;
   --secondary-bg: #fff;
   --primary-text-color: #555;
@@ -73,18 +74,6 @@ a {
   text-decoration: none;
 }
 
-.menu-trigger img{
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  overflow: hidden;
-  cursor: pointer;
-  background-color: #fff;
-}
-
 .dropdown-menu{
   position: absolute;
   top: 100px;
@@ -92,14 +81,14 @@ a {
   background-color: #fff;
   border-radius: var(--border-radius);
   padding: 10px 20px;
-  width: 200px;
+  width: 90px;
 }
 
 .dropdown-menu::before{
   content: '';
   position: absolute;
   top: -5px;
-  right: 20px;
+  right: 99px;
   height: 20px;
   width: 20px;
   background: var(--secondary-bg);
@@ -119,7 +108,6 @@ a {
   transform: translateY(-20px);
   transition: var(--speed) ease;
 }
-
 
 h3{
   width: 100%;
@@ -148,28 +136,13 @@ h3 span{
   cursor: pointer;
 }
 
-.dropdown-menu ul li:hover img{
-  opacity: 1;
-  cursor: pointer;
-}
-
 .dropdownItem{
   display: flex;
   margin: 10px auto;
-}
-
-.dropdownItem img{
-  max-width: 20px;
-  margin-right: 10px;
-  opacity: 0.5;
-  transition: var(--speed);
 }
 
 .dropdownItem a{
   max-width: 100px;
   margin-left: 10px;
   transition: var(--speed);
-}*/
-
-
-
+}
